2011-05-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/skeleton_prune:

	- (v0.1.0) Prune branches in a segmentation's skeletonization.

	* FiltersToolbox/skeleton_label.m:

	- (v0.9.1) Fix bug. First we need to distribute the bifurcation
	points to their corresponding branches. Then we can loop to find
	connected branches.

2011-05-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m:

	- (v0.9.0) Add output arguments cc.BranchNeighbours.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- (v0.2.1) Add midx as output argument.

	- (v0.2.0) Complete rewrite. Now we can use any plane to intersect
	the image volume, from horizontal to vertical.

2011-05-24  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m:

	- (v0.4.0) Add output arguments stats.nvox and stats.vol.

	- (v0.3.3) For the case when the branch gets straightened, order
	the eigenvalues so that the first one is along the skeleton.

2011-05-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m:

	- (v0.8.0) Add output argument cc.Degree.

2011-05-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* release v0.4.0

	- Important refactorization of the itk_imfilter architecture, that
	makes maintaining, compiling and extending the code much
	easier. It's also possible to extract more than one output from
	each filter.

	* ItkToolbox/SignedMaurerFilter.cpp:

	- (v0.2.1) Filter types are defined in the base header file, not
	here. Also, to avoid problems in the future, when we refer to a
	FilterType we specify which one,
	e.g. SignedMaurerFilter<InVoxelType,OutVoxelType>::FilterType.

	* ItkToolbox/BaseFilter.cpp, ItkToolbox/BaseFilter.hpp:

	- (v0.3.0) Move code that returns an empty output for empty input
	from the constructor to CopyFilterImageOutputToMatlab(). This is
	the right place for it to be.

	* ItkToolbox/DanielssonFilter.hpp, ItkToolbox/DanielssonFilter.cpp:
