@@ -1,6 +1,9 @@
 2011-05-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
-	* Add FiltersToolbox/skeleton_prune:
+	* Rename FiltersToolbox/skeleton_prune.m as
+	FiltersToolbox/scinrrd_skeleton_prune.m.
+
+	* Add FiltersToolbox/skeleton_prune.m:
 
 	- (v0.1.0) Prune branches in a segmentation's skeletonization.
 
